Update PRD to version 3.0 with added roadmap and detailed development rules